--- a/Socket-Email/documentation/latex/screenshot.tex
+++ b/Socket-Email/documentation/latex/screenshot.tex
@@ -1,5 +1,5 @@
 \subsection{Chụp màn hình}
-Server sẽ gửi lệnh \textbf{LIVESCREEN} đến client, sau đó sẽ gửi lệnh tương ứng với thời gian cần chụp màn hình, thời gian mặc định là $0.5$ giây. Thời gian chụp không nên quá nhiều, vì giới hạn dung lượng tệp đính kèm trong email. Sau đó, server sẽ nhận ảnh gửi từ client, tạo thành một video.
+Server sẽ gửi lệnh \textbf{LIVESCREEN} đến client, sau đó sẽ gửi lệnh tương ứng với thời gian cần chụp màn hình, thời gian mặc định là $0.5$ giây. Thời gian chụp không nên quá nhiều, vì giới hạn dung lượng tệp đính kèm trong email. Sau đó, server sẽ nhận ảnh gửi từ client, tạo thành một video.\\
 Các hàm cho quá trình này như sau:\\
 Ở server:
 \begin{lstlisting}
