--- a/Socket-Email/documentation/latex/syntax.tex
+++ b/Socket-Email/documentation/latex/syntax.tex
@@ -16,6 +16,7 @@ Cú pháp của các lệnh điều khiển được liệt kê bên dưới:
 \item \textbf{SHUTDOWN}: tắt máy tính.
 \item \textbf{LOGOUT}: đăng xuất. % khỏi Trái Đất
 \item \textbf{RESTART}: khởi động lại máy tính.
+\item \textbf{MAC}: lấy địa chỉ MAC.
 \item \textbf{REGISTRY} \textbf{LIST} <path>: danh sách các registry trong path.
 \item \textbf{REGISTRY} \textbf{UPDATE} <registry path> <value> <data type>: cập nhật giá trị của <registry path> thành <value> với kiểu <data type>. <value> \textbf{không} được có khoảng trắng. <data type> được lấy từ \href{https://docs.microsoft.com/en-us/windows/win32/sysinfo/registry-value-types}{link}.
 \item \textbf{DIR} \textbf{LIST} <path>: liệt kê các thư mục/file trong đường dẫn <path>.
