--- a/Socket-Email/documentation/main.tex
+++ b/Socket-Email/documentation/main.tex
@@ -62,7 +62,7 @@
 leftmargin=-5pt,rightmargin=-5pt,
 innerleftmargin=5pt,innerrightmargin=5pt]{mybox}
 \fancyhf{}
-\lhead{Báo cáo đồ án Phương pháp lập trình hướng đối tượng}
+\lhead{Báo cáo đồ án Mạng máy tính}
 \chead{}
 \rhead{}
 \cfoot{\thepage}
