packet tracer to 2.2

--- a/Packet Tracer/Latex/sources/header.tex
+++ b/Packet Tracer/Latex/sources/header.tex
@@ -17,7 +17,29 @@ MSSV & Họ và tên & Công việc \\
 \end{table}
 
 \section{Mức độ hoàn thành}
-\textbf{Bài 1:} $100\%$ (8/8)\\
-\textbf{Bài 2:} $100\%$ (4/4)\\
+\begin{table}[H]
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline 
+Bài & Yêu cầu & Đánh giá mức độ hoàn thành (\%) \\ 
+\hline 
+\multirow{8}*{1} & 1 & 100  \\ 
+ & 2 & 100\\
+ & 3 & 100\\
+ & 4 & 100\\
+ & 5 & 100\\
+ & 6 & 100\\
+ & 7 & 100\\
+ & 8 & 100\\
+\hline 
+\multirow{4}*{2} & 1 & 100  \\ 
+ & 2 & 100\\
+ & 3 & 100\\
+ & 4 & 100\\
+\hline
+\end{tabular}
+\caption{Bảng đánh giá hoàn thành} 
+\end{center}
+\end{table}
 
 \section{Phiên bản Packet Tracer đã sử dụng trong bài làm: Cisco Packet Tracer 8.1.1}
