--- a/Socket-Email/documentation/main.tex
+++ b/Socket-Email/documentation/main.tex
@@ -51,7 +51,7 @@
     filecolor=magenta,      
     urlcolor=red,
     pdftitle={An Example},
-	pdfpagemode=FullScreen,
+	% pdfpagemode=FullScreen,
     }
 \renewcommand{\listfigurename}{Danh sách hình}
 \renewcommand{\listtablename}{Tables}
