--- a/Packet Tracer/Latex/sources/header.tex
+++ b/Packet Tracer/Latex/sources/header.tex
@@ -1,15 +1,15 @@
 \section{Thông tin của nhóm}
 \begin{table}[H]
 \begin{center}
-\begin{tabular}{|c|c|c|}
+\begin{tabular}{|c|c|c|c|}
 \hline 
-MSSV & Họ và tên & Công việc \\ 
+MSSV & Họ và tên & Công việc & Đánh giá\\ 
 \hline 
-20120131 & Nguyễn Văn Lộc & Bài  \\ 
+20120131 & Nguyễn Văn Lộc & Bài 1.1, 1.2, 1.3, 1.5 + Kiểm tra chéo & Hoàn thành\\ 
 \hline 
-20120536 & Võ Trọng Nghĩa & Bài \\ 
+20120536 & Võ Trọng Nghĩa & Bài 1.4, 1.6, 1.7, 1.8 + Kiểm tra chéo & Hoàn thành\\ 
 \hline 
-20120572 & Nguyễn Kiều Minh Tâm & Bài \\ 
+20120572 & Nguyễn Kiều Minh Tâm & Bài 2 + Kiểm tra chéo & Hoàn thành\\ 
 \hline 
 \end{tabular}
 \caption{Bảng phân công thành viên} 
@@ -21,7 +21,7 @@ MSSV & Họ và tên & Công việc \\
 \begin{center}
 \begin{tabular}{|c|c|c|}
 \hline 
-Bài & Yêu cầu & Đánh giá mức độ hoàn thành (\%) \\ 
+Bài & Câu & Đánh giá mức độ hoàn thành (\%) \\ 
 \hline 
 \multirow{8}*{1} & 1 & 100  \\ 
  & 2 & 100\\
