--- a/Socket-Email/documentation/latex/documentation.tex
+++ b/Socket-Email/documentation/latex/documentation.tex
@@ -1,4 +1,4 @@
-\section{Sưu liệu cho các hàm}
+\section{Các hàm xử lý yêu cầu}
 \input{latex/parser}
 \input{latex/handle}
 \input{latex/process_application}
@@ -6,16 +6,7 @@
 \input{latex/webcam}
 \input{latex/keylog}
 \input{latex/registry}
+\input{latex/dir}
 \input{latex/shutdown}
 
 % nhiều quá :( hjx :((
-
-\begin{lstlisting}
-
-\end{lstlisting}
-Chức năng: \\
-Tham số: 
-\begin{itemize}
-\item \lstinline{}
-\end{itemize}
-Trả về: 
