--- a/Socket-Email/documentation/main.tex
+++ b/Socket-Email/documentation/main.tex
@@ -24,6 +24,8 @@
 \usetikzlibrary{arrows, calc}
 \usepackage{fancyhdr}
 \usepackage{longtable}
+\usepackage{verbatim}
+
 \pagestyle{fancy}
 \pagestyle{empty}
 \definecolor{dkgreen}{rgb}{0,0.6,0}
@@ -80,6 +82,12 @@ innerleftmargin=5pt,innerrightmargin=5pt]{mybox}
 \newpage
 
 \input{latex/introduction}
+\input{latex/directory_tree}
 \input{latex/syntax}
+\input{latex/email}
 \input{latex/documentation}
+\newpage
+\input{latex/acknowledgment}
+
+
 \end{document}
