--- a/Socket-Email/documentation/latex/cover.tex
+++ b/Socket-Email/documentation/latex/cover.tex
@@ -15,7 +15,7 @@
 \vskip 1 cm
 \begin{center}
 \fontsize{18}{14}\selectfont
-\textbf{SƯU LIỆU ĐỒ ÁN MÔN HỌC}\\
+\textbf{BÁO CÁO ĐỒ ÁN MÔN HỌC}\\
 \fontsize{26}{16}\selectfont
 \textbf{MẠNG MÁY TÍNH}\\
 \fontsize{18}{12}\selectfont
