--- a/Socket-Email/documentation/main.tex
+++ b/Socket-Email/documentation/main.tex
@@ -86,6 +86,8 @@ innerleftmargin=5pt,innerrightmargin=5pt]{mybox}
 \input{latex/syntax}
 \input{latex/email}
 \input{latex/documentation}
+\section{Demo}
+Video demo của chương trình được đăng tải tại \href{https://youtu.be/aqded2HKIt0}{đây}.
 \newpage
 \input{latex/acknowledgment}
 
